исправляю отступы для главного меню

--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
             </a>        
             <ul class="main-nav__list user-list">
               <li>
-                <ul>
+                <ul class="main-nav__feedback">
                   <li class="user-list__item user-list__item--first">
                     <a class="user-list__link" href="#">Оплатить квитанцию</a>
                   </li>
